[UPDATE] Add features:
1. Login with facebook
2. Upload directly to S3

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,1 +1,8 @@
 = link_to "Launchvn", root_path, :class => 'brand'
+%div.user-nav.brand
+  - if user_signed_in?
+    = link_to "edit", edit_user_registration_path
+    = link_to "sign out", destroy_user_session_path, :method => :delete
+  - else
+    = link_to "sign in", new_user_session_path
+    = link_to "register", new_user_registration_path
