--- a/app/views/upload/index.html.erb
+++ b/app/views/upload/index.html.erb
@@ -1,6 +1,6 @@
-<h3>Home</h3>
+<h3><%= @current_user.email %></h3>
 
-<%= s3_uploader_form post: 'test', id: "myS3Uploader" do %>
+<%= s3_uploader_form post: "upload/status", as: "file", id: "myS3Uploader" do %>
   <%= file_field_tag :file, multiple: true %>
 <% end %>
 
