--- a/app/views/upload/index.html.erb
+++ b/app/views/upload/index.html.erb
@@ -4,9 +4,15 @@
   <%= file_field_tag :file, multiple: true %>
 <% end %>
 
+<b><%= @job_id %></b>
+
 <script id="template-upload" type="text/x-tmpl">
   <div class="upload">
     {%=o.name%}
     <div class="progress"><div class="bar" style="width: 0%"></div></div>
   </div>
+</script>
+
+<script>
+
 </script>
