Update processing bar

--- a/app/views/upload/index.html.erb
+++ b/app/views/upload/index.html.erb
@@ -6,6 +6,6 @@
   <div class="upload">
     {%=o.name%}
     <div class="progress"><div class="bar" style="width: 0%"></div></div>
-    <div class="progress"><div id="processing_bar" class="bar" style="width: 0%"></div></div>
+    <div class="progress"><div id="processing_bar" style="width: 0%"></div></div>
   </div>
 </script>
