--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -3,8 +3,7 @@
   - if user_signed_in?
     = link_to "edit", edit_user_registration_path
     = link_to "sign out", destroy_user_session_path, :method => :delete
-    - unless current_user.uid.nil?
-      = image_tag current_user.image_url, :height => '25', :width => '25'
+    = image_tag current_user.avatar_url, :height => '25', :width => '25'
 
   - else
     = link_to "sign in", new_user_session_path
