--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,20 +7,20 @@
 <div class="nav-collapse">
   <ul class="nav actions">
   <% if user_signed_in? %>
+    <li><%= link_to "Browse", '/new' %></li>
+    <li><%= link_to "Upload", '/new' %></li>
     <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-        <span>
-          <img src="<%= current_user.avatar_url %>" class="avatar">
-        </span>
-        <span><%= current_user.email %><span>
+      <div class="dropdown-toggle" data-toggle="dropdown">
+        <img src="<%= current_user.avatar_url %>" class="avatar">
+        <%= current_user.email %>
         <span class="caret"></span>
-      </a>
+      </div>
       <ul class="dropdown-menu pull-right">
         <li>
-          <%= link_to "edit", edit_user_registration_path %>
+          <%= link_to "Settings", edit_user_registration_path %>
         </li>
         <li>
-          <%= link_to "sign out", destroy_user_session_path, :method => :delete %>
+          <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
         </li>
       </ul>
     </li>
