--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,25 +1,22 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="box-center">
+  <div class="signin-wrapper">
+  <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
+  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+    <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+    <%= f.email_field :email, :placeholder => "Email address" %>
+    <%= f.password_field :password,
+      :placeholder => "password (leave blank if you dont want to change it)"  %>
+    <%= f.password_field :password_confirmation,
+      :placeholder => "password confirmation"  %>
+    <%= f.password_field :current_password,
+      :placeholder =>"current password (we need it to confirm your changes)" %>
+    <%= f.submit "Update", :class => "btn primary submit" %>
+    <%= link_to "Cancel my account", registration_path(resource_name),
+      :class => "btn primary submit btn-danger",
+      :confirm => "Are you sure?", :method => :delete %>
+  <% end %>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></div>
-
-  <div><%= f.submit "Update" %></div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>.</p>
-
-<%= link_to "Back", :back %>
+  </div>
+</div>
