--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,10 +1,12 @@
 <%= link_to "Launchvn", root_path, :class => 'brand' %>
 
-<form id="search-from">
-  <input type="text" placeholder="Search slides" id="search">
-</form>
+<% if user_signed_in? %>
+  <%= form_tag "#", :id => "search-form" do %>
+    <input type="search" placeholder="Search slides" id="search">
+  <% end %>
+<% end %>
 
-<div class="nav-collapse">
+<div class="nav-collapse nav-inverse">
   <ul class="nav actions">
   <% if user_signed_in? %>
     <li><%= link_to "Browse", '/new' %></li>
