--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -14,7 +14,7 @@
       :placeholder =>"current password (we need it to confirm your changes)" %>
     <%= f.submit "Update", :class => "btn primary submit" %>
     <%= link_to "Cancel my account", registration_path(resource_name),
-      :class => "btn primary submit btn-danger",
+      :class => "btn btn-danger submit",
       :confirm => "Are you sure?", :method => :delete %>
   <% end %>
 
