--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,11 @@
-<h2>Forgot your password?</h2>
+<div class="box-center">
+  <div class="signin-wrapper">
+    <h2>Forgot your password?</h2>
 
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
-
-  <div><%= f.submit "Send me reset password instructions" %></div>
-<% end %>
-
-<%= render :partial => "devise/shared/links" %>
+    <%= form_for(resource, :as => resource_name, :url => password_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
+      <%= f.email_field :email, :placeholder => "Your email address" %>
+      <%= f.submit "Send me reset password instructions", :class => "btn btn-warning" %>
+    <% end %>
+  </div>
+</div>
