--- a/app/views/upload/index.html.erb
+++ b/app/views/upload/index.html.erb
@@ -34,11 +34,13 @@
 </div>
 
 <script id="template-upload" type="text/x-tmpl">
-  <p><h2>Watch the Progress</h2></p>
-  <div class="progress">
-    <div class="bar" id="upload_bar" style="width: 0%"></div>
-  </div>
-  <div class="progress">
-    <div id="processing_bar" style="width: 0%"></div>
+  <div class="data-context">
+    <p><h2>Watch the Progress</h2></p>
+    <div class="progress">
+      <div class="bar" id="upload_bar" style="width: 0%"></div>
+    </div>
+    <div class="progress">
+      <div id="processing_bar" style="width: 0%"></div>
+    </div>
   </div>
 </script>
