--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,3 +24,54 @@
   -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
   box-shadow: 0 1px 2px rgba(0,0,0,.15);
 }
+
+body {
+  background: #333 url('/assets/background.jpg');
+}
+
+body #main, body #main .content {
+  background: #e4e4e4 url("/assets/main-background.png") !important;
+  border-bottom: 1px solid #ccc;
+  color: #555;
+  padding-top: 20px;
+  min-height: 500px;
+}
+
+footer {
+  font-family: 'Open Sans', "Lucida Grande", Tahoma, Verdana, sans-serif;
+  font-weight: 300;
+  letter-spacing: 0;
+  font-size: 15px;
+  line-height: 1.4;
+  font-weight: 400;
+  color: #aaa;
+  clear: both;
+  display: block;
+  overflow: hidden;
+  margin: 0;
+  padding: 25px 10px;
+  position: relative;
+  text-align: right;
+  vertical-align: middle;
+  opacity: 0.8;
+}
+
+footer .title {
+  float: left;
+}
+
+footer .links {
+  float: right;
+}
+
+footer a {
+  padding: 10px;
+  color: #396;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: none;
+}
+
+
