--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -2,10 +2,27 @@
 $iconSpritePath: asset-url('glyphicons-halflings.png', image);
 $iconWhiteSpritePath: asset-url('glyphicons-halflings-white.png', image);
 @import "bootstrap";
-body { padding-top: 60px; }
+body { padding-top: 50px; }
+header .nav {
+  height: 50px;
+}
+
 @import "bootstrap-responsive";
 
+h1, h2, h3 {
+  font-weight: 300;
+}
+
+h2 {
+  font-size: 28px;
+}
+
+h3 {
+  font-size: 24px;
+}
+
 .btn {
+  margin: 10px 10px;
   padding: 10px 15px;
 }
 
@@ -88,6 +105,7 @@ input[type='text'], input[type='email'], input[type='password'], textarea {
   padding: 10px 15px;
   width: 430px;
   border: 1px solid rgba(0, 0, 0, 0.3);
+  margin: 10px 0px;
 }
 
 /*
