--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -5,7 +5,7 @@
     <%= form_for(resource, :as => resource_name, :url => password_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
       <%= f.email_field :email, :placeholder => "Your email address" %>
-      <%= f.submit "Send me reset password instructions", :class => "btn btn-warning" %>
+      <%= f.submit "Send email", :class => "btn btn-warning submit" %>
     <% end %>
   </div>
 </div>
