--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,13 +3,13 @@
     <h2>Getting started with Launchvn</h2>
 
     <ul id="social-login" class="signup">
-      <li class="facebook">
+      <li class="facebook btn">
       <%= link_to "Sign up with your Facebook account",
           user_omniauth_authorize_path(:facebook) %>
       </li>
     </ul>
 
-    <p> or create a new account</p>
+    <h3> or create a new account</h3>
 
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
       <p><%= devise_error_messages! %></p>
