Add new fields for Slide table

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <div class="title">
-  Copyright © <%= Time.now.year %> Launchvn
+  Copyright &copy; <%= Time.now.year %> Launchvn
 </div>
 
 <div class="links">
