--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,7 @@
 <%= link_to "Launchvn", root_path, :class => 'brand' %>
 
 <% if user_signed_in? %>
-  <%= form_tag "#", :id => "search-form" do %>
+  <%= form_tag "#", :id => "search-form" do |f| %>
     <input type="search" placeholder="Search slides" id="search">
   <% end %>
 <% end %>
