--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,7 +5,9 @@
   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
     <%= devise_error_messages! %>
 
-    <%= f.email_field :email, :placeholder => "Email address" %>
+    <%= f.text_field :username, :placeholder => "Username" %>
+    <%= f.text_field :name, :placeholder => "Name" %>
+    <%= f.email_field :email, :placeholder => "Email address", :disabled => true %>
     <%= f.password_field :password,
       :placeholder => "password (leave blank if you dont want to change it)"  %>
     <%= f.password_field :password_confirmation,
