--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,7 +14,8 @@
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
       <p><%= devise_error_messages! %></p>
 
-      <%= f.email_field :email, :placeholder => "Email" %>
+      <%= f.text_field :username, :placeholder => "Username" %>
+      <%= f.email_field :email, :placeholder => "Email address" %>
       <%= f.password_field :password, :placeholder => "Password" %>
       <%= f.password_field :password_confirmation, :placeholder => "Password confirm" %>
 
