--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -13,8 +13,8 @@
     <li><%= link_to "Upload", '/new' %></li>
     <li class="dropdown">
       <div class="dropdown-toggle" data-toggle="dropdown">
-        <img src="<%= current_user.avatar_url %>" class="avatar">
-        <%= current_user.email %>
+        <%= image_tag current_user.avatar_url, :class => :avatar %>
+        <%= current_user.name %>
         <span class="caret"></span>
       </div>
       <ul class="dropdown-menu pull-right">
