--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,7 +9,7 @@
 <div class="nav-collapse nav-inverse">
   <ul class="nav actions">
   <% if user_signed_in? %>
-    <li><%= link_to "Browse", '/new' %></li>
+    <li><%= link_to "Browse", '/slide/21' %></li>
     <li><%= link_to "Upload", '/new' %></li>
     <li class="dropdown">
       <div class="dropdown-toggle" data-toggle="dropdown">
