--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,7 +1,10 @@
 // Set the correct sprite paths
 $iconSpritePath: asset-url('glyphicons-halflings.png', image);
 $iconWhiteSpritePath: asset-url('glyphicons-halflings-white.png', image);
+
 @import "bootstrap";
+@import "mixins";
+
 body { padding-top: 50px; }
 header .nav {
   height: 50px;
@@ -31,11 +34,7 @@ h3 {
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   background-color: #5bb75b;
   *background-color: #51a351;
-  background-image: -moz-linear-gradient(top, #62c462, #51a351);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#62c462), to(#51a351));
-  background-image: -webkit-linear-gradient(top, #62c462, #51a351);
-  background-image: -o-linear-gradient(top, #62c462, #51a351);
-  background-image: linear-gradient(to bottom, #62c462, #51a351);
+  @include background-image-gradient(#62c462, #51a351);
   background-repeat: repeat-x;
   border-color: #51a351 #51a351 #387038;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
@@ -56,7 +55,7 @@ h3 {
 
 .btn.primary:active,
 .btn.primary.active {
-  background-color: #408140 \9;
+  background-color: #408140;
 }
 
 .btn.submit {
@@ -92,16 +91,12 @@ input.btn.submit {
 
 .content {
   background-color: #fff;
-  border-radius: 0px;
+  @include border-radius(0px);
   box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
 }
 
 input[type='text'], input[type='email'], input[type='password'], textarea {
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -o-border-radius: 4px;
-  border-radius: 4px;
+  @include border-radius(4px);
   padding: 10px 15px;
   width: 430px;
   border: 1px solid rgba(0, 0, 0, 0.3);
@@ -117,19 +112,13 @@ input[type='text'], input[type='email'], input[type='password'], textarea {
 }
 
 #social-login li {
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
-  border-radius: 3px;
+  @include border-radius(3px);
   display: inline-block;
 }
 
 #social-login li.facebook {
-  background: url("/assets/facebook-login-white.png") 8px 4px no-repeat,-webkit-linear-gradient(top, #3b5998, #2a406f);
-  background: url("/assets/facebook-login-white.png") 8px 4px no-repeat,-moz-linear-gradient(top, #3b5998, #2a406f);
-  background: url("/assets/facebook-login-white.png") 8px 4px no-repeat,-o-linear-gradient(top, #3b5998, #2a406f);
-  background: url("/assets/facebook-login-white.png") 8px 4px no-repeat,linear-gradient(top, #3b5998,#2a406f);
+  @include background-image-gradient(#3b5998, #2a406f);
+  background: url("/assets/facebook-login-white.png") 8px 4px no-repeat;
   background-color: #3b5998 !important;
   border: 1px solid #1b3161;
   font-size: 16px;
@@ -169,11 +158,11 @@ input[type='text'], input[type='email'], input[type='password'], textarea {
 }
 
 .navbar-inner form input {
-  border-radius: 2px;
+  @include border-radius(2px);
 }
 
 .navbar .avatar {
-  border-radius: 30px;
+  @include border-radius(30px);
   width: 30px;
   height: 30px;
 }
