--- a/app/views/slide/index.html.erb
+++ b/app/views/slide/index.html.erb
@@ -1,6 +1,18 @@
 <div class="slide">
-  <div class="main">
-    <div class=""></div>
+  <div class="main-player">
+    <div class="header primary-color"></div>
+    <div class="player">
+      <img id="current-slide" src="<%= @slide.page_url 1 %>" width=600px />
+    </div>
+    <div class="footer primary-color">
+      <div class="controls">
+        <div class="prev control-btn"></div>
+        <div class="next control-btn"></div>
+      </div>
+      <div class="player-progress-container">
+        <div class="player-progress"></div>
+      </div>
+  </div>
   </div>
 
   <div class="extra">
@@ -24,3 +36,8 @@
   </div>
 
 </div>
+
+<script type="text/javascript">
+  var slidePrefixUrl = "<%= @slide.slide_url_prefix %>";
+  var totalPage = "<%= @slide.pages %>";
+</script>
