--- a/app/views/slide/index.html.erb
+++ b/app/views/slide/index.html.erb
@@ -2,7 +2,7 @@
   <div class="main-player">
     <div class="header primary-color"></div>
     <div class="player">
-      <img id="current-slide" src="<%= @slide.page_url 1 %>" width=600px />
+      <img id="current-slide" src="<%= @slide.page_url 1 %>" />
     </div>
     <div class="footer primary-color">
       <div class="controls">
