--- a/app/views/slide/index.html.erb
+++ b/app/views/slide/index.html.erb
@@ -10,7 +10,7 @@
         <div class="next control-btn"></div>
       </div>
       <div class="player-progress-container">
-        <div class="player-progress"></div>
+        <div class="player-progress" style="width: <%= 100 / @slide.pages %>%;"></div>
       </div>
   </div>
   </div>
