--- a/app/views/slide/index.html.erb
+++ b/app/views/slide/index.html.erb
@@ -41,3 +41,7 @@
   var slidePrefixUrl = "<%= @slide.slide_url_prefix %>";
   var totalPage = "<%= @slide.pages %>";
 </script>
+
+<% content_for :javascript do %>
+  <%= javascript_include_tag 'slide' %>
+<% end %>
