--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -32,7 +32,7 @@ h3 {
 .btn.primary {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  background-color: #5bb75b;
+  background-color: #51a351;
   *background-color: #51a351;
   @include background-image-gradient(#62c462, #51a351);
   background-repeat: repeat-x;
@@ -42,21 +42,13 @@ h3 {
   filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
 }
 
-.btn.primary:hover,
-.btn.primary:focus,
-.btn.primary:active,
-.btn.primary.active,
-.btn.primary.disabled,
-.btn.primary[disabled] {
-  color: #ffffff;
-  background-color: #51a351;
-  *background-color: #499249;
+.btn.disable {
+  background-color: #555;
+  *background-color: #555;
+  @include background-image-gradient(#999, #555);
+  background-repeat: repeat-x;
 }
 
-.btn.primary:active,
-.btn.primary.active {
-  background-color: #408140;
-}
 
 .btn.submit {
   width: 168px;
