--- a/app/views/slide/index.html.erb
+++ b/app/views/slide/index.html.erb
@@ -1,6 +1,8 @@
 <div class="slide">
   <div class="main-player">
-    <div class="header primary-color"></div>
+    <div class="header primary-color">
+      <div id="fullscreen-btn"></div>
+    </div>
     <div class="player">
       <img id="current-slide" src="<%= @slide.page_url 1 %>" />
     </div>
