--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -19,6 +19,9 @@
       </div>
       <ul class="dropdown-menu pull-right">
         <li>
+          <%= link_to "My Decks", current_user %>
+        </li>
+        <li>
           <%= link_to "Settings", edit_user_registration_path %>
         </li>
         <li>
