--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,5 +15,8 @@
     <p></p>
     <%= render @user %>
   </div>
-
 </div>
+
+<% content_for :javascript do %>
+  <%= javascript_include_tag 'user' %>
+<% end %>
