--- a/app/views/home/browse.html.erb
+++ b/app/views/home/browse.html.erb
@@ -1,19 +1,18 @@
-<div class="user-deck">
+<div class="browse">
   <div class="main-container">
-    <h1>Talks by <%= @user.name %></h1>
+    <h1>Browse</h1>
     <p></p>
-    <% @user.slides.each do |slide| %>
+    <% @slides.each do |slide| %>
       <%= render partial: "slide/slide", locals: {slide: slide} %>
     <% end %>
-    <% (9-@user.slides.count).times do %>
+    <% (9-@slides.count).times do %>
       <%= render partial: "slide/empty_slide" %>
     <% end %>
   </div>
 
   <div class="extras">
-    <h1>The Speaker</h1>
+    <h1>Infor</h1>
     <p></p>
-    <%= render @user %>
   </div>
 </div>
 
