--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -2,4 +2,8 @@
   <%= image_tag user.avatar_url, :class => :author_avatar %>
   <div class="author_name"><%= user.name %></div>
   <div><%= user.slides.count %> slides</div>
+
+  <div>
+    <%= render partial: 'follows/follow_btn', locals: {user: user} %>
+  </div>
 </div>
