--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,5 +28,6 @@
     %footer.container
       = render 'layouts/footer'
 
-    = javascript_include_tag "application"
+    = javascript_include_tag "application"\
+    = javascript_include_tag :defaults, "http://streamslide-event.herokuapp.com/faye.js"
     = yield(:javascript)
