[fixbug] should be slug not name

--- a/app/views/slide/index.html.erb
+++ b/app/views/slide/index.html.erb
@@ -1,6 +1,6 @@
 <div class="slide">
   <div style="display:none;" id='event-server'><%= Settings.defaults[:event_server] %></div>
-  <div style="display:none;" id='slug-name'><%= @slide.name %></div>
+  <div style="display:none;" id='slug-name'><%= @slide.slug %></div>
   <div class="main-player">
     <div class="header primary-color">
       <div id="fullscreen-btn"></div>
