--- a/app/views/slide/index.html.erb
+++ b/app/views/slide/index.html.erb
@@ -49,5 +49,5 @@
   var totalPage = "<%= @slide.pages %>";
 </script>
 <% content_for :javascript do %>
-  <%= javascript_include_tag 'streamingfw/publisher','slide' %>
+  <%= javascript_include_tag 'slideplayer','streamingfw/publisher','slide' %>
 <% end %>
