--- a/app/views/slide/streaming/index.html.erb
+++ b/app/views/slide/streaming/index.html.erb
@@ -21,5 +21,5 @@
   var totalPage = "<%= @slide.pages %>";
 </script>
 <% content_for :javascript do %>
-  <%= javascript_include_tag 'slide', 'streamingfw/receiver', 'streamingfw/slidecontroller', 'slide_streaming'%>
+  <%= javascript_include_tag 'slideplayer', 'slide', 'streamingfw/receiver', 'streamingfw/slidecontroller', 'slide_streaming'%>
 <% end %>
