--- a/app/views/slide/index.html.erb
+++ b/app/views/slide/index.html.erb
@@ -1,3 +1,7 @@
+<div id="stream-url-name"class="input-append" style="display:none;"> 
+  <input type="text" placeholder="Type something…">
+  <div class='btn' id="yank">copy to clipboard</div> <!--[TODO]-->
+</div>
 <div class="slide">
   <div style="display:none;" id='event-server'><%= Settings.defaults[:event_server] %></div>
   <div style="display:none;" id='slug-name'><%= @slide.slug %></div>
@@ -17,7 +21,7 @@
         <div class="player-progress" style="width: <%= 100 / @slide.pages %>%;"></div>
       </div>
   </div>
-  </div>
+</div>
   <div class="extra">
     <div class="author">
       <%= image_tag @slide.author.avatar_url, :class => :author_avatar %>
@@ -33,15 +37,16 @@
       <div class="download">
         <%= link_to "Download PDF", @slide.pdf_url %>
       </div>
-      <div class='btn primary btn-success' id="start-session">Start session</div>
-      <div id="stream-url-name"class="input-append" style="display:none;"> 
-        <input type="text" placeholder="Type something…">
-        <div class='btn' id="yank">copy to clipboard</div> <!--[TODO]-->
+      <div class="btn-group">
+        <a class="btn" href="javascript:void(0);" id="start-session"><i class="icon-play"></i></a>
+        <a class="btn" href="javascript:void(0)" id="stop-session"><i class="icon-pause"></i></a>
+        <a class="btn" href="javascript:void(0)" id="resume-session"><i class="icon-share-alt"></i></a>
+        <a class="btn" href="javascript:void(0)" id="delete-session"><i class="icon-stop"></i></a>
       </div>
+      <div class='img loading' id='streaming-gif' style='display:none;'><img src='/assets/streamload.gif'></div>
+      <div class='img loading' id='pause-gif' style='display:none;'><img src='/assets/streampause.gif'></div>
     </div>
-    
   </div>
-
 </div>
 
 <script type="text/javascript">
