--- a/app/views/slide/streaming/index.html.erb
+++ b/app/views/slide/streaming/index.html.erb
@@ -1,19 +1,28 @@
-<div id='channel-name'><%= channel_name %></div>
+<div id='channel-name' style='display:none;'><%= channel_name %></div>
 <div style="display:none;" id='event-server'><%= Settings.defaults[:event_server] %></div>
-<div class="main-player">
-  <div class="header primary-color">
-    <div id="fullscreen-btn"></div>
-  </div>
-  <div class="player">
-    <img id="current-slide" src="<%= @slide.page_url 1 %>" />
-  </div>
-  <div class="footer primary-color">
-    <div class="controls">
-      <div class="prev control-btn"></div>
-      <div class="next control-btn"></div>
+<div class='slide'>
+  <div class="main-player">
+    <div class="header primary-color">
+      <div id="fullscreen-btn"></div>
     </div>
-  <div class="player-progress-container">
-    <div class="player-progress" style="width: <%= 100 / @slide.pages %>%;"></div>
+    <div class="player">
+      <img id="current-slide" src="<%= @slide.page_url 1 %>" />
+    </div>
+    <div class="footer primary-color">
+      <div class="controls">
+        <div class="prev control-btn"></div>
+        <div class="next control-btn"></div>
+      </div>
+    <div class="player-progress-container">
+      <div class="player-progress" style="width: <%= 100 / @slide.pages %>%;"></div>
+    </div>
+  </div>
+</div>
+<div class="extra">
+  <div class="share">
+    <div class='img loading' id='streaming-gif' style='display:none;'><img src='/assets/streamload.gif'></div>
+    <div class='img loading' id='pause-gif' style='display:none;'><img src='/assets/streampause.gif'></div>
+    <div class='img loading' id='offline-gif' style='display:none;'><img src='/assets/streamstop.jpeg'></div>
   </div>
 </div>
 <script type="text/javascript">
@@ -21,5 +30,5 @@
   var totalPage = "<%= @slide.pages %>";
 </script>
 <% content_for :javascript do %>
-  <%= javascript_include_tag 'slideplayer', 'slide', 'streamingfw/receiver', 'streamingfw/slidecontroller', 'slide_streaming'%>
+  <%= javascript_include_tag 'slideplayer','streamingfw/receiver', 'streamingfw/slidecontroller', 'streamingfw/receiverdomcontroller','slide_streaming'%>
 <% end %>
