--- a/app/views/follows/following.html.erb
+++ b/app/views/follows/following.html.erb
@@ -1,1 +1,4 @@
-Folowing
+<% @following.each do |f| %>
+  <%= render partial: 'users/following_user', locals: {user: f} %>
+  <hr style="margin: 0 50px 0 50px">
+<% end %>
