--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -20,7 +20,7 @@
       <ul class="dropdown-menu pull-right">
         <li><%= link_to "My Decks", current_user %></li>
         <li><%= link_to "Settings", edit_user_registration_path %></li>
-        <li><%= link_to "Following", following_path %></li>
+        <li><%= link_to "Following", following_path(current_user.id) %></li>
         <hr style="margin:0;">
         <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
       </ul>
