--- a/app/views/slide/index.html.erb
+++ b/app/views/slide/index.html.erb
@@ -1,4 +1,4 @@
-<div id="stream-url-name"class="input-append" style="display:none;"> 
+<div id="stream-url-name"class="input-append" style="display:none;">
   <input type="text" placeholder="Type something…">
   <div class='btn' id="yank">copy to clipboard</div> <!--[TODO]-->
 </div>
@@ -9,7 +9,7 @@
     <div class="header primary-color">
       <div id="fullscreen-btn"></div>
     </div>
-    <div class="player">
+    <div class="player" id="player-container" style="position: relative">
       <img id="current-slide" src="<%= @slide.page_url 1 %>" />
     </div>
     <div class="footer primary-color">
@@ -54,5 +54,5 @@
   var totalPage = "<%= @slide.pages %>";
 </script>
 <% content_for :javascript do %>
-  <%= javascript_include_tag 'slideplayer','streamingfw/publisher','slide' %>
+  <%= javascript_include_tag 'slideplayer','streamingfw/publisher','slide', 'notehandler', 'note' %>
 <% end %>
