--- a/app/assets/stylesheets/note.css.scss
+++ b/app/assets/stylesheets/note.css.scss
@@ -32,6 +32,13 @@
   background-color: rgba(255,255,255,0.0);
 }
 
+.note-icon {
+  width: 100%;
+  height: 100%;
+  opacity:0.8;
+  filter:alpha(opacity=80);
+}
+
 .note p{
   margin: 0;
   padding: 1% !important;
