--- a/app/assets/stylesheets/note.css.scss
+++ b/app/assets/stylesheets/note.css.scss
@@ -19,6 +19,14 @@
 
 }
 
+#notes-area {
+  position: absolute !important;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .note textarea{
   top: 0;
   left: 0;
