--- a/app/views/slide/index.html.erb
+++ b/app/views/slide/index.html.erb
@@ -11,7 +11,7 @@
     </div>
     <div class="player" id="player-container" style="position: relative">
       <img id="current-slide" src="<%= @slide.page_url 1 %>" />
-      <div id="notes-area"></div>
+      <div id="notesarea"></div>
     </div>
     <div class="footer primary-color">
       <div class="controls">
