[update] stop highlighting notes when drag mouse

--- a/app/assets/stylesheets/note.css.scss
+++ b/app/assets/stylesheets/note.css.scss
@@ -15,6 +15,15 @@
   right: -5px;
 }
 
+#notes-collection {
+  -webkit-user-select: none;  /* Chrome/Safari */
+  -moz-user-select: none;     /* Firefox */
+  -ms-user-select: none;      /* IE10+ */
+
+  -o-user-select: none;
+  user-select: none;
+}
+
 .note {
 
 }
