--- a/app/assets/stylesheets/chat.css.scss
+++ b/app/assets/stylesheets/chat.css.scss
@@ -1,54 +1,63 @@
-#chat-wrap { 
-  border: 1px solid #eee; 
-  margin: 0 0 15px 0; 
+#right-sidebar {
+  margin-left: 70px;
+}
+
+#message-area { 
+  height: 80%;
+  overflow-y: scroll;
+  background-color: white;
+  padding-top: 5px;
+  margin-bottom: 5px;
+  border-radius: 10px;
 }
 
 #chat-area { 
-  height: 100px; 
-  overflow: auto; 
-  border: 1px solid #666; 
-  padding: 20px; 
-  background: white; 
+  height: 400px;
+  background-color: #BCD4D1;
+  padding: 5px;
+}
+
+#input-chat-area {
+  height: 10%;
+  padding-bottom: 5px;
+}
+
+#input-chat {
+  width: 60%;
+  height: 100%;
+}
+
+#chat-btn {
+  width: 20%;
+  height: 100%;
+}
+
+#questions-list { 
+  height: 300px;
+  background-color: #BCD4D1;
+  margin-left:5px;
+  margin-top: 5px;
+  overflow-y: scroll;
+  border-radius:10px;
 }
 
 #chat-area span { 
-  color: white; 
-  background: #333; 
-  padding: 4px 8px; 
-  -moz-border-radius: 5px; 
-  -webkit-border-radius: 8px; 
-  margin: 0 5px 0 0; 
 }
 
 #chat-area p { 
   padding: 8px 0; 
   border-bottom: 1px solid #ccc; 
+  width: 100%;
 }
 
 #name-area { 
-  position: absolute; 
-  top: 12px; 
-  right: 0; 
-  color: white; 
-  font: bold 12px "Lucida Grande", Sans-Serif; 
-  text-align: right; 
 }   
 
 #name-area span { 
   color: #fa9f00; 
 }
 
-#send-button {
-  width: 70px;
-  height: 30px;
-  font-size: 11px; 
-  font-weight:bold;
-}
-
-#sendie { 
-  border: 3px solid #999; 
-  width: 360px; 
-  padding: 10px; 
-  font: 12px "Lucida Grande", Sans-Serif; 
-  float: right; 
+#chat-text { 
+  float:left;
+  width: 100%;
 }
