--- a/app/views/slide/viewer/index.html.erb
+++ b/app/views/slide/viewer/index.html.erb
@@ -1,11 +1,11 @@
 <div id='channel-name' style='display:none;'><%= channel_name %></div>
 <div style="display:none;" id='event-server'><%= Settings.defaults[:event_server] %></div>
-<div class='slide'>
+<div class='left-sidebar span6'>
   <div class="main-player">
     <div class="header primary-color">
       <div class='img loading' id='streaming-gif' style='display:none;'><img src='/assets/streamload.gif'></div>
       <div id="fullscreen-btn"></div>
-    </div>
+    </div><!--header-->
     <div class="player">
       <img id="current-slide" src="<%= @slide.page_url 1 %>" />
     </div>
@@ -14,26 +14,57 @@
         <div class="prev control-btn"></div>
         <div class="next control-btn"></div>
       </div>
-    <div class="player-progress-container">
-      <div class="player-progress" style="width: <%= 100 / @slide.pages %>%;"></div>
+      <div class="player-progress-container">
+        <div class="player-progress" style="width: <%= 100 / @slide.pages %>%;"></div>
+      </div>
+    </div><!--footer-->
+  </div><!--main player-->
+  <div id="asking-wrap">
+    <input id="input-asking" type="text" >
+    <button id="btn-asking" class="btn btn-primary btn-small btn-info" type="button">ASK PRESENTER</button>
+  </div>
+ </div><!--slide-->
+
+<% unless current_user.nil? %>
+  <div id="right-sidebar" class="span5">
+    <div id="chat-area">
+      <div id="message-area">
+      <p> message 1 </p>
+      <p> message 1 </p>
+      <p> message 1 </p>
+      <p> message 1 </p>
+      <p> message 1 </p>
+      <p> message 1 </p>
+      <p> message 1 </p>
+      <p> message 1 </p>
+      <p> message 1 </p>
+      <p> message 1 </p>
+      <p> message 1 </p>
+      <p> message 1 </p>
+      <p> message 1 </p>
+      </div>
+      <div id="input-chat-area">
+        <input id="input-chat" type="text" >
+        <button id="chat-btn" class="btn btn-primary btn-small btn-info" type="button">SEND</button>
+      </div>
     </div>
+
+    <div id="questions-list">
+      <p> question 1 </p>
+      <p> question 1 </p>
+      <p> question 1 </p>
+      <p> question 1 </p>
+      <p> question 1 </p>
+      <p> question 1 </p>
+      <p> question 1 </p>
+      <p> question 1 </p>
+      <p> question 1 </p>
+      <p> question 1 </p>
+      <p> question 1 </p>
+      <p> question 1 </p>
+    </div>  
   </div>
-</div>
-<aside>
-  <p id="name-area"></p>
-  <div id="chat-wrap"><div id="chat-area"></div></div>
-  <form id="send-message-area">
-    <p id='send-button' class='btn btn-primary'>MESSAGE</p>
-    <textarea id="sendie" maxlength = '100' ></textarea>
-  </form> 
-</aside>
-<div class="extra">
-  <div class="share">
-    <div class='img loading' id='pause-gif' style='display:none;'><img src='/assets/streampause.gif'></div>
-    <div class='img loading' id='offline-gif' style='display:none;'><img src='/assets/streamstop.jpeg'></div>
-  </div>
-  
-</div><!--extra-->
+<% end %>
 
 <script type="text/javascript">
   var slidePrefixUrl = "<%= @slide.slide_url_prefix %>";
